--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "@hookform/resolvers": "^3.1.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.5.0",
     "@tanstack/react-query": "^4.16.0",
@@ -22,9 +24,11 @@
     "next-auth": "^4.18.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
+    "supabase": "^1.61.2",
     "superjson": "1.9.1",
-    "zod": "^3.18.0"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
