--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint",
     "start": "next start"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
+    "@faker-js/faker": "^8.0.1",
     "@headlessui/react": "^1.7.14",
     "@hookform/resolvers": "^3.1.0",
     "@next-auth/prisma-adapter": "^1.0.5",
@@ -20,18 +24,21 @@
     "@trpc/react-query": "^10.0.0",
     "@trpc/server": "^10.0.0",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.7",
     "next": "13.1.1",
     "next-auth": "^4.18.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "slugify": "^1.6.6",
     "supabase": "^1.61.2",
     "superjson": "1.9.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/node": "^18.0.0",
+    "@types/node": "^18.16.13",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
@@ -45,7 +52,8 @@
     "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.5.0",
     "tailwindcss": "^3.2.0",
-    "typescript": "^4.8.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   },
   "ct3aMetadata": {
     "initVersion": "6.12.0"
