--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@hookform/resolvers": "^3.1.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.5.0",
+    "@supabase/supabase-js": "^2.22.0",
     "@tanstack/react-query": "^4.16.0",
     "@trpc/client": "^10.0.0",
     "@trpc/next": "^10.0.0",
     "@trpc/react-query": "^10.0.0",
     "@trpc/server": "^10.0.0",
+    "base64-arraybuffer": "^1.0.2",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
     "next": "13.1.1",
@@ -35,6 +37,8 @@
     "slugify": "^1.6.6",
     "supabase": "^1.61.2",
     "superjson": "1.9.1",
+    "unsplash-js": "^7.0.18",
+    "validator": "^13.9.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -42,6 +46,7 @@
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/validator": "^13.7.17",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "autoprefixer": "^10.4.7",
