--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
     "base64-arraybuffer": "^1.0.2",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
+    "interweave": "^13.1.0",
     "next": "13.1.1",
     "next-auth": "^4.18.3",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-quill": "^2.0.0",
     "slugify": "^1.6.6",
     "supabase": "^1.61.2",
     "superjson": "1.9.1",
@@ -42,6 +45,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18.16.13",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.14",
